--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @charset"utf-8";
 
+@media only screen and (min-width: 481px){
+	
 html{
 	background:url(dark_green.jpg) 100%/ cover;
 }
@@ -13,52 +15,6 @@ body{
 	min-height:920px;
 	box-shadow:inset 20px 0px 80px rgb(87,67,131),
 						inset -20px -0px 80px rgb(87,67,131);
-}
-header{
-	background: url(banner.png);
-	height:200px;
-}
-
-header h1{
-	color:gold;
-	font-size:4em;
-	font-family: 'Cinzel Decorative', cursive;
-	padding:40px;
-	margin-bottom: 50px;
-}
-
-nav{
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
-	height:50px;
-}
-
-nav ul{
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow:hidden;
-	background-color:#333;
-}
-
-nav ul li{
-	float:left;
-}
-
-nav ul li a{
-	display: block;
-	color:white;
-	text-align:center;
-	padding:14px 20px;
-	text-decoration:none;
-}
-.active{
-	background-color:rgb(0, 102, 0);
-}
-
-nav ul li a:hover{
-	background-color:black;
 }
 
 aside{
@@ -90,11 +46,12 @@ footer{
   	color:white;
 	font-size:1em;
 	padding:1px;
-	}
+}
 	footer a{
 		color:white;
 		text-decoration:none;
 		background-color:red;
 		border-radius:50px;
 		padding:5px;
-	}
+}
+}
